# qtrade

./: .gitignore
.trae/: .ignore
data-collector/: Makefile  README.md  go.mod  go.sum
docker/: README.md  docker-compose.yml  (+2 more)
quant-engine/: Makefile  main.py  mypy.ini  pyproject.toml  tasks.md
quant-engine/docs/: openapi_v3_spec.json  openapi_v3_spec.yaml
quant-engine/scripts/migrations/: 001_create_factor_tables.sql  002_create_factor_combinations_table.sql  003_create_backtest_tables.sql
quant-engine/src/: app.py
quant-engine/src/api/v1/: router.py
quant-engine/src/api/v1/endpoints/: backtest_task.py  health.py  system.py
quant-engine/src/backtest_engine/: __init__.py
quant-engine/src/backtest_engine/api/: __init__.py
quant-engine/src/backtest_engine/api/v1/: __init__.py  backtest_task.py  factor_config.py
quant-engine/src/backtest_engine/dao/: __init__.py  backtest_dao.py  base.py  cache.py  factor_combination_dao.py  task_dao.py
quant-engine/src/backtest_engine/models/: __init__.py  backtest_models.py  database.py  factor_combination.py  task_models.py
quant-engine/src/backtest_engine/services/: __init__.py  backtest_engine.py  backtrader_analyzer.py  data_replayer.py  factor_combination_manager.py  factor_data_feed.py  factor_strategy.py  return_calculator.py  signal_generator.py  task_manager.py  task_scheduler.py
quant-engine/src/clients/: data_collector_client.py  tushare_client.py
quant-engine/src/config/: connection_pool.py  database.py  redis.py  settings.py
quant-engine/src/dao/: __init__.py  connection_pool.py  factor_combination_dao.py  sentiment_factor_dao.py
quant-engine/src/factor_engine/api/v1/: __init__.py  fundamental.py  market.py  sentiment.py  technical.py  unified.py
quant-engine/src/factor_engine/calculators/: fundamental.py  market.py  sentiment.py  technical.py
quant-engine/src/factor_engine/dao/: __init__.py  base.py  cache.py  factor_dao.py
quant-engine/src/factor_engine/models/: database.py  schemas.py
quant-engine/src/factor_engine/services/: factor_service.py  sentiment_service.py
quant-engine/src/nlp/: model_manager.py  sentiment_analyzer.py
quant-engine/src/utils/: exceptions.py  logger.py
quant-engine/tests/test_backtest_engine/: test_backtest_engine.py  test_backtrader_analyzer.py  test_data_replayer.py  test_factor_combination_dao.py  test_factor_combination_manager.py  test_factor_data_feed.py  test_factor_strategy.py  test_return_calculator.py  test_signal_generator.py  test_utils.py
quant-engine/tests/test_common/test_nlp/: conftest.py  test_model_manager.py  test_nlp_integration.py  test_sentiment_analyzer.py
quant-engine/tests/test_factor_engine/: test_market_calculator.py
quant-engine/tests/test_factor_engine/test_calculators/: test_fundamental.py  test_market.py  test_sentiment.py  test_technical.py
(+104 files in other folders)
